# my_repository

./: .gitignore  file1.txt
Assignment 10 - 11/: hw.py  test_hw.py
Assignment 12/: hw.py
Assignment 15/: hw.py  test_hw.py
Assignment 6/: Assignment6_ex1.py  Assignment6_ex10.py  Assignment6_ex11.py  Assignment6_ex12.py  Assignment6_ex13.py  Assignment6_ex14.py  Assignment6_ex15.py  Assignment6_ex16.py  Assignment6_ex17.py  Assignment6_ex18.py  Assignment6_ex19.py  Assignment6_ex2.py  Assignment6_ex20.py  Assignment6_ex21.py  Assignment6_ex22.py  Assignment6_ex3.py  Assignment6_ex4.py  Assignment6_ex5.py  Assignment6_ex6.py  Assignment6_ex7.py  Assignment6_ex8.py  Assignment6_ex9.py
Assignment 7/: Assignment 7.py
Assignment 8/: hw.py
Assignment 9/: hw.py  test_hw.py
Assignment_13/: pyproject.toml  requirements.txt  test_ascii.py  test_myfile.py
Assignment_13/new_project/: first_file.txt  read_test.py
Project 1 ASCII ART/: main.py
