[tool.poetry]
name = "assignment-13"
version = "0.1.0"
description = ""
authors = ["Sultanmurat <kkoyash@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.5"
numpy = "^2.4.3"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
